Replaced Anička with Aleš on CZ Jobs page

--- a/www.topmonks.cz/src/html/volna-mista/index.html
+++ b/www.topmonks.cz/src/html/volna-mista/index.html
@@ -23,7 +23,7 @@
         <a href="https://hire.withgoogle.com/public/jobs/topmonkscom">Prohlédněte si otevřené pozice na Google Hire</a>
       </div>
       <script type="module">
-        import { html, render } from "https://unpkg.com/lit-html@1.1.0/lit-html.js?module";
+        import { html, render } from "https://unpkg.com/lit-html@1.1.2/lit-html.js?module";
         const list = document.querySelector(".hire-jobs");
         const jobsList = jobs => html`
           <ul>
@@ -49,8 +49,7 @@
     </div>
   </div>
   <div class="contact-info mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-    <p>Máš zájem? Ozvi se Aničce! <a href="mailto:happy@topmonks.com">happy@topmonks.com</a> /
-      <a href="tel:+420 777 556 859">+420&nbsp;777&nbsp;556&nbsp;859</a></p>
+    <p>Máš zájem? Ozvi se nám! <a href="mailto:happy@topmonks.com">happy@topmonks.com</a></p>
   </div>
 </section>
 <div
@@ -559,26 +558,25 @@
       <a class="action-button jumbotron__cta" href="https://www.topmonks.com/meet-us/">STAV SE U NÁS</a>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h3>Ozvi se Aničce</h3>
+      <h3>Ozvi se nám</h3>
       <p>Stále pokukujeme po nových Moncích, kteří by se k&nbsp;nám mohli přidat.
-        Ozvi se Aničce a zjisti víc o&nbsp;tom, koho zrovna hledáme. I&nbsp;když tu není
+        Ozvi se nám a zjisti víc o&nbsp;tom, koho zrovna hledáme. I&nbsp;když tu není
         tvoje vysněná pozice, dej vědět a zkusíme něco vymyslet.</p>
       <div class="mdc-layout-grid__inner">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-          <img alt="[foto] Anička Kovácsová" loading="lazy"
-               src="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/anna-kovacsova"
-               srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/anna-kovacsova 1x,
-                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_1.5/https://insight.topmonks.com/avatar/anna-kovacsova 1.5x,
-                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_2/https://insight.topmonks.com/avatar/anna-kovacsova 2x,
-                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_3/https://insight.topmonks.com/avatar/anna-kovacsova 3x,"
+          <img alt="[foto] Aleš Roubíček" loading="lazy"
+               src="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/ales-roubicek"
+               srcset="https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto/https://insight.topmonks.com/avatar/ales-roubicek 1x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_1.5/https://insight.topmonks.com/avatar/ales-roubicek 1.5x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_2/https://insight.topmonks.com/avatar/ales-roubicek 2x,
+                       https://res.cloudinary.com/topmonks/image/fetch/w_112,f_auto,dpr_3/https://insight.topmonks.com/avatar/ales-roubicek 3x,"
                onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                width="112" height="112">
         </div>
         <div
           class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
-          <p><span itemprop="name">Anička Kovácsová</span><br>
-            <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>
+          <p><span itemprop="name">Aleš Roubíček</span><br>
             <a itemprop="email" href="mailto:happy@topmonks.com">happy@topmonks.com</a>
           </p>
         </div>
