Replaced Anička with Aleš on Contact page

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -211,14 +211,13 @@
         <h3>Happy Maker AKA HR</h3>
         <p class="box_text-about">We are always on the lookout for talented Monks to join our team. Take a look at <a
           href="https://www.topmonks.com/jobs">Jobs</a> page
-          or just contact Anička.</p>
+          or just contact us.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
-            {{ avatar(members['anna-kovacsova'], 112) }}
+            {{ avatar(members['ales-roubicek'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Anička Kovácsová</span><br>
-              <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777 556 859</a><br>
+            <p><span itemprop="name">Aleš Roubíček</span><br>
               <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@topmonks.com</a></p>
           </div>
         </div>
