Country Life Logo

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -246,6 +246,7 @@
           Pricefx')}}</a>
         <a href="https://zonky.cz/" title="jdi na Zonky homepage">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
         <a href="https://www.adler.info/" title="jdi na Adler homepage">{{sprite('img_logo_adler', '[logo] Adler')}}</a>
+        <a href="https://www.countrylife.cz/" title="jdi na Country Life homepage">{{sprite('countrylifelogo', '[logo] Country Life')}}</a>
       </div>
     </div>
   </div>
