Name - testimonials for subpages

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -368,7 +368,7 @@
             myšlenky při navrhování a auditu architektury.
           </blockquote>
           <hr class="line-between_grey">
-          <figcaption><b>Patrika Tjokordy</b><br>DEBNK</figcaption>
+          <figcaption><b>Patrik Tjokord</b><br>DEBNK</figcaption>
         </div>
       </div>
     </div>
