--- a/www.topmonks.cz/src/html/shared/header.html
+++ b/www.topmonks.cz/src/html/shared/header.html
@@ -35,7 +35,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="/o-nas/">o nás</a></li>
+            <li class=""><a href="/tym/">tým</a></li>
             <li class=""><a href="/kde-nas-najdete/">kde nás najdete</a></li>
             <li class=""><a href="/volna-mista/">volná místa</a></li>
             <li class=""><a href="/kontakt/">kontakt</a></li>
