--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -20,7 +20,7 @@
           <nav>
             <ul>
               <li><a href="/">Home</a></li>
-              <li><a href="/o-nas/">O nás</a></li>
+              <li><a href="/tym/">Tým</a></li>
               <li><a href="/kde-nas-najdete/">Kde nás najdete</a></li>
               <li><a href="https://blog.topmonks.com/">Blog</a></li>
               <li><a href="/volna-mista/">Volná místa</a></li>
