--- a/www.topmonks.cz/src/html/tym/index.html
+++ b/www.topmonks.cz/src/html/tym/index.html
@@ -27,9 +27,13 @@
   <div id="team--collapsed" class="tm-bgnd-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       {{ macros.teamMember(members['jiri-fabian'], true) }}
-      {{ macros.teamMember(members['anna-kovacsova'], true) }}
-      {{ macros.teamMember(members['ondrej-tupy'] , true) }}
-      {{ macros.teamMember(members['lea-petrasova'], true) }}
+      {{ macros.teamMember(members['jiri-jansa'], true) }}
+      {{ macros.teamMember(members['ales-roubicek'], true) }}
+      {{ macros.teamMember(members['tomas-paulus'], true) }}
+      {{ macros.teamMember(members['jiri-penzes'], true) }}
+      {{ macros.teamMember(members['lumir-mrkva'], true) }}
+      {{ macros.teamMember(members['pavol-noha'], true) }}
+      {{ macros.teamMember(members['veronika-tomasova'], true) }}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid tm-team__members">
           <div class="mdc-layout-grid__inner">
