Creation of Monkslab

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -3,18 +3,157 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>TopMonks</title>
+  <title>Monkslab</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <meta name="description" content="Monks Lab je otvorený kreatívny priestor pre domácich kutilov, kreatívcov
+          a študentov">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://monkslab.cz/">
   <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
-
-<body>
-  <div style="display: flex; justify-content: center; align-items: center;flex-direction: column;height: 90vh;">
-    <h1>TopMonks</h1>
-    <h2>Created with simple generator</h2>
+<header class="">
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div
+        class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
+        <div class="hamburger__container">
+          <div class="hamburger__bar"></div>
+          <div class="hamburger__bar"></div>
+          <div class="hamburger__bar"></div>
+        </div>
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
+        <a class="logo" href="/" title="Go to homepage">
+        </a>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+        <nav id="navigation" class="menu">
+          <ul class="menu__list">
+            <li class=""><a href="">Členství</a></li>
+            <li class=""><a href="">Akce</a></li>
+            <li class=""><a href="">Wiki</a></li>
+            <li class=""><a href="">Kontakt</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </div>
-</body>
+</header>
+<body>
+<section class="">
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <h1>Vymýšľajte, prototypujte a realizujte vaše nápady. Jsme vaše
+          pražská&nbsp;dílna.</h1>
+        <label>
+          <input type="email" name="EMAIL" placeholder="Zadajte váš e-mail a ostaňte v&nbsp;centre diania">
+          <button>Zistiť viac</button>
+        </label>
+        <p class="helper">Zoscrollujte nižšie a zistite viac...</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="about">
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <h2>O&nbsp;Monks Labe</h2>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+        <p>Monks Lab je otvorený kreatívny priestor pre domácich kutilov, kreatívcov
+          a študentov, ktorí im umožní prototypovať, vymýšľať a realizovať ich
+          nápady.</p>
 
+        <p>Domáci kutili nemusia hnevať svojich susedov a drahé polovičky hlukom a
+          špinou pri obrábaní rôznych materiálov. Školy môžu vďaka Monks Labu
+          rozšíriť svoje vyučovanie o&nbsp;praktické hodiny a pustiť tak študentov
+          k&nbsp;moderným projektom</p>
+      </div>
+      <div
+        class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <h3>Mecha dílna</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus tincidunt
+          volutpat tortor ipsum arcu, sed commodo elementum.</p>
+      </div>
+      <div
+        class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <h3>3D Space</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odio nec eget
+          dui;at.</p>
+      </div>
+      <div
+        class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
+        <h3>Hookamonk spot</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Erat luctus congue in nec quisque tellus urna
+          accumsan felis.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="membership">
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <h2>O&nbsp;členství v&nbsp;našem<br>Monks Lab</h2>
+        <p><b>Skúšobná prevádzka<br></b>Stavte sa u&nbsp;nás každú stredu od 17:30
+          do&nbsp;20:30</p>
+      </div>
+      <div class="paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <p>Monks Lab je prístupný verejnosti počas otváracích hodín. Môžu ho
+          využívať iba členovia, ktorí platia mesačný členský poplatok.</p>
+        <p>Ako často môžu dieľnu využívať závisí od úrovne ich členstva.
+          Členovia môžu neobmedzene využívať výbavu labu. Stroje môžu členovia
+          ovládať až po absolvovaní úvodných školení.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <a class="btn" href="">Stát se členem Monks Labu</a>
+      </div>
+    </div>
+  </div>
+</section>
+<hr>
+<section class="contact">
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <h2>Kde nás nájdete?</h2>
+      </div>
+      <div class="paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <p>Centrally located in a vibrant area of Albion (5km from the Brisbane CBD) and
+          surrounded by cafe's, bars, breweries, yoga studios and creative businesses,
+          Colab 4010&nbsp;is the perfect spot for work and play. Contact us to arrange
+          a&nbsp;tour.</p>
+
+        <p>Zavolajte nám<br><a>+420&nbsp;608&nbsp;026&nbsp;645</a></p>
+
+        <p>Napište nám<br>
+          <a href="mailto:hello&#64;monkslab.cz">hello&#64;monkslab.cz</a>
+        </p>
+
+        <p>Stavte sa u&nbsp;nás<br> Struhařovská 2931/9, 141 00&nbsp;Praha</p>
+      </div>
+    </div>
+  </div>
+</section>
+<footer>
+  <div class="mdc-layout-grid layout-width">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <p>2019&nbsp;Monks Lab&nbsp;&ndash; supported by TopMonks</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+      </div>
+    </div>
+  </div>
+</footer>
+</body>
 </html>
