--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -43,10 +43,10 @@
   </div>
 </header>
 <body>
-<section class="">
+<section class="intro">
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <div class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h1>Vymýšľajte, prototypujte a realizujte vaše nápady. Jsme vaše
           pražská&nbsp;dílna.</h1>
         <label>
@@ -55,7 +55,7 @@
         </label>
         <p class="helper">Zoscrollujte nižšie a zistite viac...</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <div class="bgnd mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
       </div>
     </div>
   </div>
@@ -144,16 +144,17 @@
     </div>
   </div>
 </section>
+</body>
 <footer>
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-        <p>2019&nbsp;Monks Lab&nbsp;&ndash; supported by TopMonks</p>
+        <p>2019 Monks Lab - supported by <a href="www.topmonks.cz" type="media_type">TopMonks</a></p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <p style="float: right">Provozní podmínky</p>
       </div>
-    </div>
+      </div>
   </div>
 </footer>
-</body>
 </html>
