Monkslab subpage - clenství

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="cs">
-
 <head>
   <meta charset="UTF-8">
   <title>Monkslab</title>
@@ -13,7 +12,6 @@
   <meta property="og:url" content="https://monkslab.cz/">
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/header.css">
-
 </head>
 <header class="">
   <div class="mdc-layout-grid layout-width">
@@ -62,7 +60,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class=""><a href="membership">Členství</a></li>
+            <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
             <li class=""><a href="contact">Kontakt</a></li>
