--- a/www.topmonks.cz/src/html/tym/index.html
+++ b/www.topmonks.cz/src/html/tym/index.html
@@ -27,13 +27,14 @@
   <div id="team--collapsed" class="tm-bgnd-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       {{ macros.teamMember(members['jiri-fabian'], true) }}
-      {{ macros.teamMember(members['jiri-jansa'], true) }}
+      {{ macros.teamMember(members['jirka-jansa'], true) }}
       {{ macros.teamMember(members['ales-roubicek'], true) }}
       {{ macros.teamMember(members['tomas-paulus'], true) }}
       {{ macros.teamMember(members['jiri-penzes'], true) }}
       {{ macros.teamMember(members['lumir-mrkva'], true) }}
       {{ macros.teamMember(members['pavol-noha'], true) }}
       {{ macros.teamMember(members['veronika-tomasova'], true) }}
+      {{ macros.teamMember(members['simona-zabrzova'], true) }}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <div class="mdc-layout-grid tm-team__members">
           <div class="mdc-layout-grid__inner">
@@ -41,7 +42,7 @@
               <a href="#team" class="action-button show-more">Ukaž více</a>
             </div>
             {% for id, member in members %}
-            {% if not member.pickup %}
+            {% if not member.consultant %}
             {{ macros.teamMember(member) }}
             {% endif %}
             {% endfor %}
