--- a/www.topmonks.cz/src/html/macros/helpers.html
+++ b/www.topmonks.cz/src/html/macros/helpers.html
@@ -9,13 +9,27 @@
 <link rel="stylesheet" href="{{ '/stylesheets/components/' ~ stylesheet ~ '/index.css' }}">
 {%- endmacro %}
 
+
+{% macro avatar(member, imageSize) -%}
+  {% set fullName = member.name + ' ' + member.surname %}
+  <img alt="[photo] {{fullName}}" loading="lazy"
+       src="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_auto,f_auto/https://insight.topmonks.com/avatar/{{member.id}}"
+       srcset="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1x,
+             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1.5,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1.5x,
+             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_2,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 2x,
+             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_3,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 3x"
+       onerror="this.onerror=null; this.src='/assets/img/monk_logo.png'"
+       width="{{imageSize}}" height="{{imageSize}}">
+{%- endmacro %}
+
 {% macro teamMember(member, hero) -%}
-{% set fullName = member.name + ' ' + member.surname %}
-<div class="box mdc-layout-grid__cell tm-team__member {% if hero %}mdc-layout-grid__cell--span-3-desktop tm-team__member--hero{% endif %}">
-  <img alt="[foto] {{fullName}}" src="https://insight.topmonks.com/avatar/{{member.id}}" onerror="this.onerror=null; this.src='/images/monk_logo.png'"/>
-  <div class="content">
-    <strong>{{fullName}}</strong>
-    <span>{{member.job_title}}</span>
+  {% set fullName = member.name + ' ' + member.surname %}
+  {% set imageSize = 450 if hero else 75 %}
+  <div class="box mdc-layout-grid__cell tm-team__member {% if hero %}mdc-layout-grid__cell--span-4-desktop tm-team__member--hero{% endif %}">
+    {{ avatar(member, imageSize) }}
+    <div class="content">
+      <strong>{{fullName}}</strong>
+      <span>{{member.job_title}}</span>
+    </div>
   </div>
-</div>
 {%- endmacro %}
