--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -63,7 +63,7 @@
             <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
-            <li class=""><a href="contact">Kontakt</a></li>
+            <li class=""><a href="/contact">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -319,7 +319,7 @@
     <div class="mdc-layout-grid__inner">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <p>2019 Monks Lab - supported by <a href="www.topmonks.cz" type="media_type">TopMonks</a></p>
+        <p>2019 Monks Lab - supported by <a href="https://www.topmonks.cz" type="media_type">TopMonks</a></p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
