Monkslab - změna link v Nav Bar

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -63,7 +63,7 @@
             <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
-            <li class=""><a href="/contact">Kontakt</a></li>
+            <li class=""><a href="/kontakt">Kontakt</a></li>
           </ul>
         </nav>
       </div>
