--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -65,7 +65,7 @@
             <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
-            <li class=""><a href="contact">Kontakt</a></li>
+            <li class=""><a href="/kontakt">Kontakt</a></li>
           </ul>
         </nav>
       </div>
