Monkslab html úpravy + tvorba alert buttons

--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -63,7 +63,7 @@
         <nav id="navigation" class="menu">
           <ul class="menu__list">
             <li class=""><a href="/clenstvi">Členství</a></li>
-            <li class=""><a href="">Akce</a></li>
+            <li class=""><a href="/clenstvi#events">Akce</a></li>
             <li class=""><a href="">Wiki</a></li>
             <li class=""><a href="/kontakt">Kontakt</a></li>
           </ul>
@@ -126,7 +126,7 @@
   <div class="mdc-layout-grid layout-width">
     <div class="mdc-layout-grid__inner">
       <div
-        class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
+        class="intro_paragraph mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>Staňte sa členmi Monks Lab<br>
           a vstúpte do sveta kreativity</h1>
       </div>
