--- a/monkslab.cz/src/html/kontakt/index.html
+++ b/monkslab.cz/src/html/kontakt/index.html
@@ -214,7 +214,7 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-        <p style="float: right">Provozní podmínky</p>
+        <p class="conditions">Provozní podmínky</p>
       </div>
     </div>
   </div>
