--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -250,7 +250,7 @@
           přítomni asistenti (po 12&ndash;18, st 20&ndash;23 a pá&nbsp;8&ndash;11).</p>
         <p><b>799 Kč s DPH za měsíc</b></p>
       </div>
-      <div class="membership_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+      <div class="membership_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
         <a class="btn" href="#membership">Stát se členem</a>
       </div>
     </div>
@@ -294,7 +294,7 @@
       <div
         class="box-grey mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
         <div class="mdc-layout-grid__inner">
-          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Ikona Domečku se srdíčkem - pro text o Monkslab přehlídce</title>
               <path
@@ -305,12 +305,12 @@
                 fill="black"/>
             </svg>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
             <h3>Monks Lab přehlídka</h3>
             <p>Komentovaná prohlídka FabLabu, při které se dozvíš možnosti, jaké
               laboratoř má, co všechno jde vyrobit, co naopak&nbsp;nejde.</p>
           </div>
-          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <p>
               <time>4.8.2019 / 17:00 - 17:45</time>
             </p>
@@ -320,7 +320,7 @@
       <div
         class="box-grey mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
         <div class="mdc-layout-grid__inner">
-          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Ikona žárovky - pro text o Školení CNC</title>
               <path
@@ -370,12 +370,12 @@
                 fill="black"/>
             </svg>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
             <h3>Školení CNC</h3>
             <p>Komentovaná prohlídka FabLabu, při které se dozvíš možnosti, jaké
               laboratoř má, co všechno jde vyrobit, co naopak&nbsp;nejde.</p>
           </div>
-          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <p>
               <time>19.9.2019 / 17:00 - 19:00</time>
             </p>
@@ -385,7 +385,7 @@
       <div
         class="box-grey mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
         <div class="mdc-layout-grid__inner">
-          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <div class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>Ikona ruky - pro Hands-on text</title>
               <path
@@ -396,12 +396,12 @@
                 fill="black"/>
             </svg>
           </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
             <h3>Hands-on test první elektronické dýmky na světe</h3>
             <p>Komentovaná prohlídka FabLabu, při které se dozvíš možnosti, jaké
               laboratoř má, co všechno jde vyrobit, co naopak&nbsp;nejde.</p>
           </div>
-          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+          <div class="event_time mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <p>
               <time>20.10.2019 / 20:00 - 23:00</time>
             </p>
@@ -449,7 +449,7 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-8-desktop">
-        <p style="float: right">Provozní podmínky</p>
+        <p class="conditions">Provozní podmínky</p>
       </div>
     </div>
   </div>
