--- a/www.topmonks.cz/src/html/tym/index.html
+++ b/www.topmonks.cz/src/html/tym/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/topmonks.html' %}
 {%- import 'macros/helpers.html' as macros -%}
-{% block title %}Tým - TopMonks{% endblock %}
+{% block title %}Náš Tým - TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/stylesheets/team.css">
 <link rel="stylesheet" href="/stylesheets/v2.css">
